--- a/index.html
+++ b/index.html
@@ -9,36 +9,29 @@
 
 <body>
   <!--Селектор за тегом вага = 1-->
-  <p>Lorem ipsum dolor sit amet.</p>
+  <p>Lorem ipsum dolor sit amet.1</p>
   <!--Селектор за класом вага = 10-->
-  <div class="blue">Lorem ipsum dolor sit amet.</div>
+  <div class="blue">Lorem ipsum dolor sit amet.2</div>
   <!--Селектор за id вага = 100-->
   <span id="red">Lorem ipsum dolor sit amet.</span>
-
   <!--Селектор за атрибутом вага = 10-->
   <div data-type="box">Lorem ipsum dolor sit amet.</div>
-
   <!--Вкладений селектор вага = 11-->
   <div>
     <p class="blueviolet">Lorem ipsum dolor sit amet.</p>
   </div>
-
   <!--Дочірній селектор вага = 2-->
   <div>
     <h3>Lorem ipsum dolor sit amet.</h3>
   </div>
-
   <!--Послідовність селекторів вага = 12-->
   <ul>
     <li class="one">Lorem ipsum dolor sit amet.</li>
   </ul>
-
   <!--Тег + клас вага = 11-->
   <h2 class="first">Lorem ipsum dolor sit amet.</h2>
-
   <!--Тег + атрибут вага = 11-->
   <a href="#" title="link">Lorem ipsum dolor sit amet.</a>
-
   <!--id + клас вага = 110-->
   <div id="qqwwee" class="apple">Lorem ipsum dolor sit amet.</div>
 </body>
