--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <a href="#" title="link">Lorem ipsum dolor sit amet.</a>
   <!--id + клас вага = 110-->
   <div id="qqwwee" class="apple">Lorem ipsum dolor sit amet.</div>
+  <p>edit1</p>
 </body>
 
 </html>
